# ITCXOP2

./: .gitlab-ci.yml  .gitmodules  ITCMM.lib  Readme.md  check-pdbs.sh
Headers/: Itcmm.h
Help/: itcxop2 Help.ihf
XOP/: itcXOP2.xop
itcXOP2/: ChannelSelection.cpp  DeviceIDClass.cpp  DeviceIDClass.h  DeviceIDHelper.h  ErrorDisplayClass.cpp  ErrorDisplayClass.h  HelperFunctions_DAC.h  ITCChannelTypeEnum.h  ITCCloseAll2.cpp  ITCConfigAllChannels2.cpp  ITCGetChannelConfig2.cpp  ITCGetCurrentDevice2.cpp  ITCGetErrorString2.cpp  ITCInitialize2.cpp  ITCMM64.lib  ITCReadDigital2.cpp  ITCReadTimer2.cpp  ITCSetModes2.cpp  ITCSetState2.cpp  ITCStartAcq2.cpp  ITCStopAcq2.cpp  ITCUpdateFIFOPosition2.cpp  RegisterOperations.cpp  deploy.sh  itcXOP2.cpp  itcXOP2.h  itcXOP2.r  itcXOP2.rc  itcdll.cpp  itcdll.h
itcXOP2/Testing/: CHN_CHS_Tests.ipf  CheckDimLabels.ipf  QuickTest.pxp  SelectionWaveTests.ipf  Test_Configs.ipf  Test_ITCCloseAll2.ipf  Test_ITCConfigChannel2.ipf  Test_ITCConfigChannelReset2.ipf  Test_ITCConfigChannelUpload2.ipf  Test_ITCGetDevices2.ipf  Test_ITCInitialize2.ipf  Test_ITCSelectDevice2.ipf  Test_ITCSetDAC2.ipf  Test_ITCStartAcq2.ipf  Test_ITCStopAcq2.ipf  Test_ITCUpdateFIFOPositionAll2.ipf  Test_ITCWriteDigital2.ipf
itcXOP2/VC2015/: itcXOP2.sln  itcXOP2.vcxproj  itcXOP2.vcxproj.filters
itcmm/: License.txt
itcmm/Headers/: 0acqerrors.h  Compatibility.h  EpcDLL.h  ExportDefs.h  ITC16.h  ITC18.h
src/: CMakeLists.txt  ChannelSelection.cpp  ChannelSelection.h  ConcurrentQueue.h  ConcurrentXOPNotice.cpp  ConcurrentXOPNotice.h  CustomExceptions.cpp  CustomExceptions.h  DeviceIDClass.cpp  DeviceIDClass.h  DeviceIDHelper.cpp  DeviceIDHelper.h  ErrorDisplayClass.cpp  ErrorDisplayClass.h  HelperFunctions.cpp  HelperFunctions.h  HelperFunctions_ITC.cpp  HelperFunctions_ITC.h  ITCChannelTypeEnum.cpp  ITCChannelTypeEnum.h  ITCCloseAll2.cpp  ITCCloseDevice2.cpp  ITCConfigAllChannels2.cpp  ITCConfigChannel2.cpp  ITCConfigChannelReset2.cpp  ITCConfigChannelUpload2.cpp  ITCDeviceTypeEnum.cpp  ITCDeviceTypeEnum.h  ITCFIFOAvailable2.cpp  ITCFIFOAvailableAll2.cpp  ITCGetAllChannelsConfig2.cpp  ITCGetChannelConfig2.cpp  ITCGetCurrentDevice2.cpp  ITCGetDeviceInfo2.cpp  ITCGetDevices2.cpp  ITCGetErrorString2.cpp  ITCGetSerialNumber2.cpp  ITCGetState2.cpp  ITCGetVersions2.cpp  ITCInitialize2.cpp  (+27 more)
src/ParseOperationTemplate/: OperationHandler.ipf
src/VC2015/: itcXOP2.vcxproj  itcXOP2.vcxproj.filters
tests/: CHN_CHS_Tests.ipf  CheckDimLabels.ipf  DevIDTests.ipf  FlagValuesTests.ipf  GenerateDestTest.ipf  ITCHelperFunctions.ipf  ITCTesting.ipf  QuickTest.ipf  QuickTest.pxp  SelectionWaveTests.ipf  Test_Configs.ipf  Test_ITCCloseAll2.ipf  Test_ITCCloseDevice2.ipf  Test_ITCConfigAllChannels2.ipf  Test_ITCConfigChannel2.ipf  Test_ITCConfigChannelReset2.ipf  Test_ITCConfigChannelUpload2.ipf  Test_ITCFIFOAvailable2.ipf  Test_ITCFIFOAvailableAll2.ipf  Test_ITCGetAllChannelsConfig2.ipf  Test_ITCGetChannelConfig2.ipf  Test_ITCGetCurrentDevice2.ipf  Test_ITCGetDevices2.ipf  Test_ITCGetState2.ipf  Test_ITCGetVersions2.ipf  Test_ITCInitialize2.ipf  Test_ITCOpenDevice2.ipf  Test_ITCReadADC2.ipf  Test_ITCReadDigital2.ipf  Test_ITCReadTimer2.ipf  Test_ITCSelectDevice2.ipf  Test_ITCSetDAC2.ipf  Test_ITCSetGlobals2.ipf  Test_ITCStartAcq2.ipf  Test_ITCStopAcq2.ipf  Test_ITCUpdateFIFOPosition2.ipf  Test_ITCUpdateFIFOPositionAll2.ipf  Test_ITCWriteDigital2.ipf
tools/: Settings.xml
